GRHB337: * fix side menu jumping width

--- a/frontend/src/components/common/authorized-menu/styles.module.scss
+++ b/frontend/src/components/common/authorized-menu/styles.module.scss
@@ -3,6 +3,7 @@
   top: 96px;
   display: flex;
   flex-direction: column;
+  width: 290px;
   min-width: 290px;
   height: calc(100vh - 96px);
   padding: 40px;
